; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_cpio.c_grub_cpio_read.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_cpio.c_grub_cpio_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, %struct.grub_cpio_data* }
%struct.grub_cpio_data = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*, i64)* @grub_cpio_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_cpio_read(%struct.TYPE_3__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.grub_cpio_data*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %10 = load %struct.grub_cpio_data*, %struct.grub_cpio_data** %9, align 8
  store %struct.grub_cpio_data* %10, %struct.grub_cpio_data** %7, align 8
  %11 = load %struct.grub_cpio_data*, %struct.grub_cpio_data** %7, align 8
  %12 = getelementptr inbounds %struct.grub_cpio_data, %struct.grub_cpio_data* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = load %struct.grub_cpio_data*, %struct.grub_cpio_data** %7, align 8
  %15 = getelementptr inbounds %struct.grub_cpio_data, %struct.grub_cpio_data* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = add nsw i64 %16, %19
  %21 = load i64, i64* %6, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = call i64 @grub_disk_read(i32 %13, i32 0, i64 %20, i64 %21, i8* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %3
  br label %29

26:                                               ; preds = %3
  %27 = load i64, i64* %6, align 8
  %28 = trunc i64 %27 to i32
  br label %29

29:                                               ; preds = %26, %25
  %30 = phi i32 [ -1, %25 ], [ %28, %26 ]
  ret i32 %30
}

declare dso_local i64 @grub_disk_read(i32, i32, i64, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
